# hand_tracking_cpp

./: CMakeLists.txt  Readme.md
include/: Reg.h
src/: constructors.cpp  correspondence.cpp  draw.py  energy_terms.cpp  frame_processing.cpp  helper_func.cpp  main.cpp  reg.cpp
